--- a/app/assets/stylesheets/blocks/_recent-reports.sass
+++ b/app/assets/stylesheets/blocks/_recent-reports.sass
@@ -1,5 +1,5 @@
 .recent-reports
-  +position(fixed, right 0, top 0, bottom 0)
+  +position(fixed, right 0, top 0, bottom 0, 1)
   +size(14rem 100%)
   background-color: $side
   +overflow(hidden auto)
