--- a/app/views/home/_tutorials.slim
+++ b/app/views/home/_tutorials.slim
@@ -1,4 +1,4 @@
-section.welcome-section#tutrials
+section.welcome-section#tutorials
   .container
     h2.welcome-section__title
       = image_tag('question.svg', class: 'welcome-section__title-question-icon')
@@ -16,56 +16,48 @@ section.welcome-section#tutrials
           .col-sm-12.col-md-3
             section.welcome-small-section
               .welcome-small-section__inner.is-work
+                = image_tag('mac.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
                   | Macの基本
-                .welcome-small-section__description
-                  p ああああああ
           .col-sm-12.col-md-3
             section.welcome-small-section
               .welcome-small-section__inner.is-work
+                = image_tag('html.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
                   | HTML
-                .welcome-small-section__description
-                  p ああああああ
           .col-sm-12.col-md-3
             section.welcome-small-section
               .welcome-small-section__inner.is-work
+                = image_tag('css.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
                   | CSS
-                .welcome-small-section__description
-                  p ああああああ
           .col-sm-12.col-md-3
             section.welcome-small-section
               .welcome-small-section__inner.is-work
+                = image_tag('linux.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
                   | Linux
-                .welcome-small-section__description
-                  p ああああああ
           .col-sm-12.col-md-3
             section.welcome-small-section
               .welcome-small-section__inner.is-work
+                = image_tag('ruby.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
                   | Ruby
-                .welcome-small-section__description
-                  p ああああああ
           .col-sm-12.col-md-3
             section.welcome-small-section
               .welcome-small-section__inner.is-work
+                = image_tag('git.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
                   | Git
-                .welcome-small-section__description
-                  p ああああああ
           .col-sm-12.col-md-3
             section.welcome-small-section
               .welcome-small-section__inner.is-work
+                = image_tag('rails.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
                   | Ruby on Rails
-                .welcome-small-section__description
-                  p ああああああ
           .col-sm-12.col-md-3
             section.welcome-small-section
               .welcome-small-section__inner.is-work
+                = image_tag('js.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
                   | JavaScript
-                .welcome-small-section__description
-                  p ああああああ
