--- a/app/assets/stylesheets/_base.css.sass
+++ b/app/assets/stylesheets/_base.css.sass
@@ -6,8 +6,7 @@
     right: 17.5rem
 
 body
-  height: 100vh
-  +overflow(hidden scroll)
+  min-height: 100vh
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
   .modal-open
     overflow: hidden
