--- a/app/assets/stylesheets/blocks/user/_user-data.sass
+++ b/app/assets/stylesheets/blocks/user/_user-data.sass
@@ -1,6 +1,6 @@
 .user-part
   background-color: #b04d4d
-  +inline-block
+  +inline-block(middle)
   padding: .1875rem .5rem
   +text-block(.625rem 1.45, center $reversal-text 600)
   margin-right: .5rem
