--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -10,11 +10,5 @@
     nav.auth-form-nav
       ul.auth-form-nav__items
         li.auth-form-nav__item
-          = link_to root_path, class: 'auth-form-nav__item-link' do
-            | トップページ
-        li.auth-form-nav__item
-          = link_to login_path, class: 'auth-form-nav__item-link' do
-            | サインイン
-        li.auth-form-nav__item
-          = link_to login_path, class: 'auth-form-nav__item-link' do
-            | 秘密保持契約書
+           span.auth-form-nav__item-link(data-target='#nda-modal' data-toggle='modal')
+            | 秘密保持契約内容を確認
