--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,9 +1,4 @@
 - title @user.login_name
-- if current_user.admin? && @user.find_job_assist?
-  .user-find-job-assist
-    .container
-      .user-find-job-assist__value
-        | 就職支援希望者
 header.page-header
   .container
     .page-header__container
@@ -11,72 +6,32 @@ header.page-header
         label.user-part(class= "is-#{@user.part}")
           = t(@user.part)  
         = @user.login_name
-      .page-header__action
-        = link_to users_path, class: 'is-button-standard-md-secondary' do
-          i.fa.fa-angle-left
-          = t('interns')
 
 .page-body
   .container
-    .row.is-gutter-width-32
-      .col-md-6.col-xs-12
-        = render 'users/user_data', user: @user
-        - if @user.active_practices.present?
-          = render 'users/active_practices', user: @user
-        = render 'users/completed_practices', user: @user
-
-      h3= t('reports')
-      - if @reports.any?
-          - @reports.each do |report|
-            .reports-item
-              = link_to report, itempro: "url", class: "reports-item__link" do
-                h3.reports-item__title(itemprop="name")= report.title
-              time.contents-list-meta__updated_at(datetime="#{report.updated_at.to_datetime}" pubdate="pubdate")
-                = l report.updated_at, format: :short
-                - if report.comments.any?
-                  = t('blank')
-                  = t('report_comments_any')
-                  = report.comments.count
-                  = t('comments_count')
-              .btn-group
-                = link_to t('edit'), edit_report_path(report), class: 'btn btn-primary'
-                = link_to t('destroy'), report_path(report), data: { confirm: t('are_you_sure') }, method: :delete, class: 'btn btn-danger'
-
-        .col-md-6
-          h3= t('reports')
-          - if @reports.any?
-              - @reports.each do |report|
-                .reports-item
-                  = link_to report, itempro: "url", class: "reports-item__link" do
-                    h3.creports-item__title(itemprop="name")= report.title
-                  time.contents-list-meta__updated_at(datetime="#{report.updated_at.to_datetime}" pubdate="pubdate")
-                    = l report.updated_at, format: :short
-                    - if report.comments.any?
-                      = t('blank')
-                      = t('report_comments_any')
-                      = report.comments.count
-                      = t('comments_count')
-                  .btn-group
-                    = link_to t('edit'), edit_report_path(report), class: 'btn btn-primary'
-                    = link_to t('destroy'), report_path(report), data: { confirm: t('are_you_sure') }, method: :delete, class: 'btn btn-danger'
-      .col-md-6
-        h2= t('reports')
-        - if @reports.any?
-            - @reports.each do |report|
-              .reports-item
-                = link_to report, itempro: "url", class: "reports-item__link" do
-                  h3.creports-item__title(itemprop="name")= report.title
-                time.contents-list-meta__updated_at(datetime="#{report.updated_at.to_datetime}" pubdate="pubdate")
-                  = l report.updated_at, format: :short
-                  - if report.comments.any?
-                    = t('blank')
-                    = t('report_comments_any')
-                    = report.comments.count
-                    = t('comments_count')
-                .btn-group
-                  = link_to t('edit'), edit_report_path(report), class: 'btn btn-primary'
-                  = link_to t('destroy'), report_path(report), data: { confirm: t('are_you_sure') }, method: :delete, class: 'btn btn-danger'
-      - if @reports.any?
+    .user.is-margin-bottom-24
+      .row.is-gutter-width-32
         .col-md-6.col-xs-12
-          = render 'users/user_reports', reports: @reports
-          
+          = render 'users/user_data', user: @user
+          - if @user.active_practices.present?
+            = render 'users/active_practices', user: @user
+          = render 'users/completed_practices', user: @user
+
+        - if @reports.any?
+          .col-md-6.col-xs-12
+            = render 'users/user_reports', reports: @reports
+    
+    - if current_user == @user || current_user.admin?
+      .form-actions
+        ul.form-actions__items
+          li.form-actions__item
+            = link_to users_path, class: 'is-button-standard-md-secondary' do
+              = t('interns')
+          - if current_user.admin?
+            li.form-actions__item
+              = link_to edit_admin_user_path, class: 'is-button-standard-lg-secondary' do
+                | 管理者として情報変更
+          - if current_user == @user
+            li.form-actions__item
+              = link_to edit_user_path, class: 'is-button-standard-lg-warning' do
+                | 登録情報を変更する
