--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -55,20 +55,32 @@ header.header
       - if current_user
         .header-links.is-user-links
           ul.header-links__items
-              li
-                = form_tag reports_url, method: 'get', class: 'header-search' do
-                  = text_field_tag 'word', @word, class: 'a-xs-text-input header-search__text-input' , placeholder: t('search_report')
-                  button.is-button-standard-sm-secondary.is-icon.header-search__submit(type= 'submit')
-                    i.fa.fa-search
-              li.header-links__item
-                = link_to '', class: "header-links__link" do
-                  i.fa.fa-bell-o
-              li.header-links__item
-                = link_to edit_user_path(current_user), class: "header-links__link" do
-                  i.fa.fa-cog
-              li.header-links__item
-                = link_to logout_path, class: "header-links__link" do
-                  i.fa.fa-sign-out
+            li
+              = form_tag reports_url, method: 'get', class: 'header-search' do
+                = text_field_tag 'word', @word, class: 'a-xs-text-input header-search__text-input' , placeholder: t('search_report')
+                button.is-button-standard-sm-secondary.is-icon.header-search__submit(type= 'submit')
+                  i.fa.fa-search
+            li.header-links__item.js-drop-down
+              .header-links__link.js-drop-down__trigger
+                i.fa.fa-bell-o
+              .header-drop-down.js-drop-down__target
+                ul.header-drop-down__items
+                  li.header-drop-down__item
+                    a.header-drop-down__item-link href="#"
+                      | Action
+                  li.header-drop-down__item
+                    a.header-drop-down__item-link href="#"
+                      | Another action
+                  li.header-drop-down__item
+                    a.header-drop-down__item-link href="#"
+                      | Something else here
+                .header-drop-down__overlay.js-drop-down__trigger
+            li.header-links__item
+              = link_to edit_user_path(current_user), class: "header-links__link" do
+                i.fa.fa-cog
+            li.header-links__item
+              = link_to logout_path, class: "header-links__link" do
+                i.fa.fa-sign-out
       - else
         .header-links.is-auth-links
           ul.header-links__items
