Get pagination at reports page with Kaminari

--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -39,3 +39,4 @@
             - if @search_word.present?
               .report__body
                 = highlight("#{report.description}", "#{@search_word}")
+      = paginate @reports
