画像を追加、申し込みフォームのデザイン

--- a/app/assets/stylesheets/blocks/auth-form/_auth-form-item.sass
+++ b/app/assets/stylesheets/blocks/auth-form/_auth-form-item.sass
@@ -10,6 +10,8 @@
   +text-block(.75rem 1.45)
   +hover-link-reversal
 .auth-form-item__radio-buttons
+  margin-top: .5rem
+  margin-bottom: -.5rem
   &.is-half
     display: flex
     flex-wrap: wrap
