--- a/app/views/home/_administrator.slim
+++ b/app/views/home/_administrator.slim
@@ -79,6 +79,7 @@ section.welcome-section#administrator
                 h3.welcome-small-section__title
                   | 怖話
                 .welcome-small-section__description
+                  p= image_tag('kowabana.png')
                   p 怖い話の投稿数が20,000話を超える世界最大の怖い話投稿サイト。
           .col-sm-12.col-md-4
             section.welcome-small-section
@@ -86,6 +87,7 @@ section.welcome-section#administrator
                 h3.welcome-small-section__title
                   | kulku
                 .welcome-small-section__description
+                  p= image_tag('kowabana.png')
                   p 外に出ずパソコンだけで写真と矢印を使った道案内が作れるサービス。
           .col-sm-12.col-md-4
             section.welcome-small-section
@@ -93,6 +95,7 @@ section.welcome-section#administrator
                 h3.welcome-small-section__title
                   | 256 interns
                 .welcome-small-section__description
+                  p= image_tag('interns.jpg')
                   p インターンのためのオンライン学習システムです。学習内容、日報、質問が書けます。
 
     section.welcome-child-section
