--- a/app/views/home/_finding_employment.slim
+++ b/app/views/home/_finding_employment.slim
@@ -32,7 +32,7 @@ section.welcome-section#finding-employment
                     .col-md-3
                       = image_tag('program.svg', class: 'welcome-child-section__top-image')
                     .col-md-9
-                      p ある程度のプログラムを書くことは学習をすれば誰でもできますが、プログラムをすることを仕事にすることは、誰でもできるものでもありません。自分がプログラムをすることを仕事にすることに向いてるかを試す場としてもインターンはおすすめです。もし、向いてないことに気付かないまま就職してしまうと、それはそれで面倒なことになるかもしれません。
+                      p ある程度のプログラムを書くことは学習をすれば誰でもできますが、プログラムをすることを仕事にすることは、誰でもできるものでもありません。自分がプログラムをすることを仕事にすることに向いてるかを試す場としてもインターンはおすすめです。
     section.welcome-child-section
       h3.welcome-child-section__title
         | 卒業生の就職先
