--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -92,4 +92,5 @@
         li.auth-form-action__item
           = f.submit '内容更新', class: 'is-button-standard-md-warning js-sign-up-action'
       
-  = render 'nda_modal'
+  = render 'nda_modal', f: f
+  
