--- a/app/assets/stylesheets/_base.css.sass
+++ b/app/assets/stylesheets/_base.css.sass
@@ -8,10 +8,16 @@
 body
   min-height: 100vh
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
+  overflow-y: scroll
   .modal-open
     overflow: hidden
   &.home-index
     background-color: $base-color
+  &.has-background
+    background-image: image_url('main-visual.jpg')
+    background-size: cover
+    background-position: center center
+    background-attachment: fixed
 
 .container
   max-width: 100%
