--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -1,9 +1,10 @@
 
 nav.global-nav.js-show-mobile-nav__target
-  .global-nav-current-user
-    = link_to user_path(current_user), class: 'global-nav-current-user__link'
-      .global-nav-current-user__icon
-        = gravatar_tag current_user, size: '320'
+  - if current_user
+    .global-nav-current-user
+      = link_to user_path(current_user), class: 'global-nav-current-user__link'
+        .global-nav-current-user__icon
+          = gravatar_tag current_user, size: '320'
   .global-nav-links.is-contents-links
     ul.global-nav-links__items
       li.global-nav-links__item
@@ -42,7 +43,7 @@ nav.global-nav.js-show-mobile-nav__target
             i.fa.fa-file-o
           .global-nav-links__link-label
             | wiki
-      - if current_user.admin?
+      - if current_user && current_user.admin?
         li.global-nav-links__item
           = link_to admin_users_path, class: "global-nav-links__link #{current_link('/admin/users')}" do
             .global-nav-links__link-icon
