--- a/app/views/home/_other.slim
+++ b/app/views/home/_other.slim
@@ -15,6 +15,7 @@ section.welcome-section#other
                 h3.welcome-small-section__title
                   | 忘年会
                 .welcome-small-section__description
+                  p= image_tag('party.jpg')
                   p 毎年、忘年会と呼ぶには時期が早いのですが、11月の第一木曜日に初台の居酒屋で忘年会を行います。忘年会にはたくさんの卒業したインターンの方も集まります。飲食代は僕らが負担します。
           .col-sm-12.col-md-4
             section.welcome-small-section
@@ -22,6 +23,7 @@ section.welcome-section#other
                 h3.welcome-small-section__title
                   | 納会
                 .welcome-small-section__description
+                  p= image_tag('nokai.jpg')
                   p 毎月第一木曜日にフィヨルドオフィスで納会を行います。卒業したインターンの方も交えてピザを食べながら就職の相談や、プログラムの相談などがこの会でできます。納会中はビデオチャットを繋いでいるので、オンラインで参加をすることもできます。遅れて参加、途中退出は自由です。
           .col-sm-12.col-md-4
             section.welcome-small-section
@@ -29,4 +31,5 @@ section.welcome-section#other
                 h3.welcome-small-section__title
                   | フィヨルドオフィス
                 .welcome-small-section__description
+                  p= image_tag('office.jpg')
                   p インターンの方はフィヨルドオフィスが空いていれば自由に使うことができます。ただのマンションの一室ですが、無線LAN、電源、エスプレッソマシン、アーロンチェアがあるので、休日などで自宅から離れて集中して勉強したいときなどに活用できます。
