--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -15,7 +15,8 @@
         .form-actions.is-margin-bottom-0
           ul.form-actions__items
             li.form-actions__item
-              = link_to '', class: "is-button-standard-xl-warning is-block" do
+              // TODO 仮URL
+              = link_to '/contact', class: "is-button-standard-xl-warning is-block" do
                 i.fa.fa-envelope-o
                 | 申込みはこちらから
 
