ouluとbootstrapでmixinの名前がかぶってエラーが出てたので、ouluのボタンを読まないようにした

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -14,7 +14,7 @@
 //////////////////////////////
 @import oulu-mixins
 @import modules/web-fonts/font-awsome
-@import modules/buttons/buttons
+//@import modules/buttons/buttons
 //////////////////////////////
 // initializers
 //////////////////////////////
@@ -33,7 +33,7 @@
 @import bootstrap-import
 
 @import settings/helpers/**/*
-@import settings/custom-bootstrap//**/*
+@import settings/custom-bootstrap/**/*
 @import base
 @import node_modules/highlight.js/styles/github
 @import github
