--- a/app/assets/stylesheets/_bootstrap-import.sass
+++ b/app/assets/stylesheets/_bootstrap-import.sass
@@ -19,7 +19,7 @@
 @import bootstrap/grid
 @import bootstrap/tables
 @import bootstrap/forms
-//@import bootstrap/buttons
+@import bootstrap/buttons
 
 // Components
 @import bootstrap/animation
