[WIP]フォームの中の実装

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -16,7 +16,7 @@
           ul.form-actions__items
             li.form-actions__item
               // TODO 仮URL
-              = link_to '/contact', class: "is-button-standard-xl-warning is-block" do
+              = link_to '/contact/new', class: "is-button-standard-xl-warning is-block" do
                 i.fa.fa-envelope-o
                 | 申込みはこちらから
 
