トップページの画像追加

--- a/app/views/home/_administrator.slim
+++ b/app/views/home/_administrator.slim
@@ -87,7 +87,7 @@ section.welcome-section#administrator
                 h3.welcome-small-section__title
                   | kulku
                 .welcome-small-section__description
-                  p= image_tag('kowabana.png')
+                  p= image_tag('kulku.png')
                   p 外に出ずパソコンだけで写真と矢印を使った道案内が作れるサービス。
           .col-sm-12.col-md-4
             section.welcome-small-section
