--- a/app/views/home/_fee.slim
+++ b/app/views/home/_fee.slim
@@ -8,7 +8,10 @@ section.welcome-section#fee
         | スクールとアルバイトの中間
       .welcome-child-section__description
         p
-          | 256インターンは、学費を払ってスキルを身につける「スクール」と、作業をして給与を貰う「アルバイト」の中間です。一週間ごとに「学習をする週」と「作業をする週」を交互に行ってもらいます。学費の代わりに労働で対価を支払っていただくことで、無料でスキルを身につけることができます。
+          | 256インターンは、学費を払ってスキルを身につける「スクール」と、作業をして給与を貰う「アルバイト」の中間です。一週間ごとに「学習をする週」と「作業をする週」を交互に行ってもらいます。学費の代わりに労働で対価を支払っていただくことで、無料でスキルを身につけることができます。この辺は
+          = link_to 'http://www.remotework-labo.jp/2015/10/interview_09/', target: '_blank' do
+            | こちらのインタビュー
+          | に詳しく書いてあるので一読しておいてください。
       .welcome-small-sections
         .row
           .col-sm-12.col-md-5
