コンフリクト時に消し忘れた不要なhtmlを削除

--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -94,3 +94,4 @@ nav.sort-nav
           - @reports.each do |report|
             - if report.present?
               = render 'report_list_item', report: report
+      = paginate @reports
