improve recent reports

--- a/app/assets/stylesheets/blocks/_recent-reports.sass
+++ b/app/assets/stylesheets/blocks/_recent-reports.sass
@@ -16,6 +16,7 @@
     background-color: $side-shade
 .recent-reports-item__title
   +text-block(.875rem 1.45 .125rem, 600)
+  word-break: break-all
 .recent-reports-item__date
   +text-block(.75rem 1.45, block right)
 .recent-reports-item__user-icon
