improve recent reports

--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -26,4 +26,8 @@ html.is-admin lang="ja"
         = yield
         //= render 'active_users'
     - unless yield(:page_classes).include?('no-recent-reports')
-      = render 'reports/recent_reports'
+      - if @reports.nil? == false
+        .report-list
+          - @reports.each do |report|
+            - if report.present?
+              = render 'reports/recent_reports', report: report
