--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -87,6 +87,14 @@ nav.sort-nav
         .is-button-standard-sm-secondary.is-select.sort-nav__select
           select
 
+  nav.sort-nav
+    .container
+      .sort-nav__inner
+        = form_tag reports_url, method: 'get' do
+          = label_tag :practice_id, 'プラクティスで絞り込む:', class: 'sort-nav__label'
+          = select_tag :practice_id, options_from_collection_for_select(Practice.all, :id, :title), class: 'is-button-standard-sm-secondary is-select sort-nav__select'
+          = submit_tag '', class: 'is-button-standard-sm-secondary is-icon header-search__submit'
+
   .page-body
     .container
       - if @reports.nil? == false
