--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -43,7 +43,7 @@
 @import atoms/**/*
 @import blocks/**/*
 
-@import bootstrap/variables
+@import settings/custom-bootstrap/variables
 @import bootstrap/mixins
 @import bootstrap/close
 @import bootstrap/modal
