--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -55,18 +55,10 @@
   nav.sort-nav
     .container
       .sort-nav__inner
-        .sort-nav__label
-          | プラクティスで絞り込む:
-        .is-button-standard-sm-secondary.is-select.sort-nav__select
-          select
-
-  nav.sort-nav
-    .container
-      .sort-nav__inner
         = form_tag reports_url, method: 'get' do
           = label_tag :practice_id, 'プラクティスで絞り込む:', class: 'sort-nav__label'
-          = select_tag :practice_id, options_from_collection_for_select(Practice.all, :id, :title), class: 'is-button-standard-sm-secondary is-select sort-nav__select'
-          = submit_tag '', class: 'is-button-standard-sm-secondary is-icon header-search__submit'
+          .is-button-standard-sm-secondary.is-select.sort-nav__select
+            = select_tag :practice_id, options_from_collection_for_select(Practice.all, :id, :title, { selected: params[:practice_id] }), include_blank: '全ての日報を表示', onchange: "this.form.submit()"
 
   .page-body
     .container
