--- a/app/assets/stylesheets/settings/helpers/long-text.sass
+++ b/app/assets/stylesheets/settings/helpers/long-text.sass
@@ -25,15 +25,15 @@
   ul
     margin-bottom: 1.8em
     margin-left: 1.6em
+    list-style: disc outside
   li
     +text-block(.9375rem 1.6 .8em)
   pre
     margin-bottom: 2rem
     code
-      +text-block(.8125rem 1.45)
-      padding: 1rem
-      background-color: $background-color
-      border-radius: .25rem
+      +text-block(.8125rem 1.6)
+      padding: .5rem .75rem
+      border: solid .0625rem #d9d9d9
   .twitter-tweet
     +margin(horizontal, auto)
     margin-bottom: 2.5rem !important
