検索ボタンのアイコンサイズ変更

--- a/app/assets/stylesheets/blocks/_header.sass
+++ b/app/assets/stylesheets/blocks/_header.sass
@@ -60,6 +60,7 @@ $header-height: 3.125rem
 .is-icon.header-search__submit
   +size(2rem)
   +border-radius(left, 0)
+  font-size: 1rem
 
 .header__title
   color: $default-text
