--- a/app/assets/stylesheets/blocks/user/_user-reports.sass
+++ b/app/assets/stylesheets/blocks/user/_user-reports.sass
@@ -2,12 +2,16 @@
   +media-breakpoint-down(sm)
     &:first-child
       margin-top: 2rem
+
 .user-reports:not(:last-child)
   margin-bottom: 2rem
+
 .user-reports__items
   margin-top: -.5rem
+
 .user-reports__title
   +text-block(1rem 1.45 .75rem)
+
 .user-reports-item
   +position(relative)
   border-bottom: solid .0625rem $background-color-shade
@@ -15,6 +19,7 @@
     padding-right: 4rem
     +media-breakpoint-down(sm)
       padding-right: 0
+
 .user-reports-item__link
   display: block
   +padding(vertical, .5rem)
@@ -24,17 +29,31 @@
   &:hover
     .user-reports-item__title
       text-decoration: underline
+
 .user-reports-item__user-icon
   +position(absolute, left 0, top .5rem)
   +size(2.75rem auto)
   border-radius: 50%
+
 .user-reports-item__title
   +text-block(1rem 1.55, $main-color)
   +media-breakpoint-down(sm)
     line-height: 1.4
     margin-bottom: .5rem
+
 .user-reports-item__updated-at
-  +text-block(.875rem 1.45, block $muted-text)
+  +text-block(.875rem 1.45, block $muted-text inline-block)
+
+.user-reports-item__comment-count
+  +text-block(.875rem 1.45, block $muted-text inline-block)
+  margin-left: .75rem
+
+.user-reports-item__comment-count-label
+  +text-block(.875rem 1.45, block $muted-text inline-block)
+  margin-right: .25rem
+
+.user-reports-item__comment-count-value
+  +text-block(.875rem 1.45, block $muted-text inline-block)
 
 .user-reports-item-actions
   +position(absolute, right 0, top .25rem)
@@ -46,6 +65,7 @@
   +media-breakpoint-down(sm)
     margin-top: -.5rem
     justify-content: flex-end
+
 .user-reports-item-actions__item-link
   +size(2rem)
   display: flex
