--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -3,7 +3,7 @@ header.page-header
   .container
     .page-header__container
       h1.page-header__title
-        | ページ一覧
+        | WIKI
       .page-header__action
         = link_to "/pages/new", class: 'is-button-standard-md-warning' do
           i.fa.fa-plus
