--- a/app/views/users/_user_reports.slim
+++ b/app/views/users/_user_reports.slim
@@ -5,12 +5,13 @@
         = link_to report, itempro: "url", class: "user-reports-item__link" do
           h3.user-reports-item__title(itemprop="name")= report.title
           time.user-reports-item__updated-at(datetime="#{report.updated_at.to_datetime}" pubdate="pubdate")
-            = l report.updated_at, format: :short
-            - if report.comments.any?
-              = t('blank')
-              = t('report_comments_any')
-              = report.comments.count
-              = t('comments_count')
+            = l report.updated_at, format: :semi_long
+          - if report.comments.any?
+            .user-reports-item__comment-count
+              .user-reports-item__comment-count-label
+                i.fa.fa-comment-o
+              .user-reports-item__comment-count-value
+                = report.comments.count
         .user-reports-item-actions
           ul.user-reports-item-actions__items
             li.user-reports-item-actions__item
